fixed walkthrough overlap, revised wording

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ body, html {
 
 a {
 	cursor: pointer;
+	text-decoration: none;
+	color: #333333;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 /* Style classes
@@ -63,7 +69,7 @@ a {
 		font-size: 16px;	
 	}
 
-  .medium-font {
+  	.medium-font {
 		font-size: 24px;
 	}
 
@@ -74,11 +80,11 @@ a {
 }
 
 @media (min-width: 70rem) {
-  .regular-font {
+  	.regular-font {
 		font-size: 18px;
 	}
 
-  .medium-font {
+  	.medium-font {
 		font-size: 32px;
 	}
 
@@ -142,7 +148,7 @@ a {
 		float: left;
 		height: 100vh;
 		min-height: 540px;
-	  margin: 0;
+	  	margin: 0;
 	}
 
 	.column.full { width: 100%; }
@@ -263,8 +269,8 @@ a {
 		fill: #333333;
 
 		-webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    transition: all .5s;
+    	-moz-transition: all .5s;
+    	transition: all .5s;
 	}
 
 	.icon-web:hover {
@@ -387,7 +393,7 @@ a {
 	.walkthrough-text {
 		display: block;
 		margin: 0px 40px;
-		font-size: 14px;
+		font-size: 16px;
 	}
 
 	.walkthrough-mockup {
@@ -431,7 +437,7 @@ a {
 	.walkthrough-text {
 		display: block;
 		margin: 0px 40px;
-		font-size: 16px;
+		font-size: 18px;
 	}
 }
 
@@ -499,7 +505,7 @@ a {
 	}
 }
 
-/* FRAQ
+/* Footer
 --------------------------------------------- */
 
 .container-footer {
@@ -518,5 +524,3 @@ a {
 .copyright {
 	margin: 20px 0;
 }
-
-
